@@ -1546,13 +1546,45 @@ void ColumnPrivate::replaceTexts(int first, const QVector<QString>& new_values) 
 		Q_EMIT m_owner->dataChanged(m_owner);
 }
 
+int ColumnPrivate::dictionaryIndex(int row) const{
+	if (!available.dictionary)
+		const_cast<ColumnPrivate*>(this)->initDictionary();
+
+	const auto& value = textAt(row);
+	int index = 0;
+	auto it = m_dictionary.constBegin();
+	while (it != m_dictionary.constEnd()) {
+		if (*it == value)
+			break;
+		++index;
+		++it;
+	}
+
+	return index;
+}
+
+void ColumnPrivate::initDictionary() {
+	m_dictionary.clear();
+	if (columnMode() != AbstractColumn::ColumnMode::Text)
+		return;
+
+	auto data = static_cast<QVector<QString>*>(m_data);
+	for (auto& value : *data) {
+		if (!value.isEmpty() && !m_dictionary.contains(value))
+			m_dictionary << value;
+	}
+
+	available.dictionary = true;
+}
+
 /**
  * \brief Set the content of row 'row'
  *
  * Use this only when columnMode() is DateTime, Month or Day
  */
 void ColumnPrivate::setDateAt(int row, QDate new_value) {
-	if (m_columnMode != AbstractColumn::ColumnMode::DateTime && m_columnMode != AbstractColumn::ColumnMode::Month
+	if (m_columnMode != AbstractColumn::ColumnMode::DateTime
+		&& m_columnMode != AbstractColumn::ColumnMode::Month
 		&& m_columnMode != AbstractColumn::ColumnMode::Day)
 		return;
 
