@@ -5,6 +5,7 @@ New features:
 		* Plot templates - allow to save and re-use custom plot configurations
 	* [spreadsheet]
 		* use a different icon for calculated columns, also show the definition of the formula and parameters in the tooltip text in the project explorer
+		* Heatmap formatting for categorical data in text columns
 	* [import]
 		* Import data from Excel .xlsx files using QXlsx library
 		* HDF5: support VLEN data import
